tests/e2e/semantics/assignment_none.error
Error: syntax error in story at line 4

4|    b = foo(a:2)
      ^^^^^^^^^^^^

E0116: Assignments with the type `None` are not allowed
