tests/e2e/semantics/assignment_none.story
function foo a:int
	x = 0

b = foo(a:2)
